separate jira, openai, mlops, petstore frontend modules as MFEs

--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -98,12 +98,12 @@ http {
         }
 
         location /petstore {
-          auth_jwt_enabled on;
-          auth_jwt_redirect on;
-          auth_jwt_location HEADER=Authorization;
-          auth_jwt_algorithm RS512;
-          auth_jwt_use_keyfile on;
-          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+          # auth_jwt_enabled on;
+          # auth_jwt_redirect on;
+          # auth_jwt_location HEADER=Authorization;
+          # auth_jwt_algorithm RS512;
+          # auth_jwt_use_keyfile on;
+          # auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
 
           proxy_pass http://petstore;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -127,12 +127,12 @@ http {
         }
 
         location /jiraproxy {
-          auth_jwt_enabled on;
-          auth_jwt_redirect on;
-          auth_jwt_location HEADER=Authorization;
-          auth_jwt_algorithm RS512;
-          auth_jwt_use_keyfile on;
-          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+          # auth_jwt_enabled on;
+          # auth_jwt_redirect on;
+          # auth_jwt_location HEADER=Authorization;
+          # auth_jwt_algorithm RS512;
+          # auth_jwt_use_keyfile on;
+          # auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
 
           proxy_pass http://jiraproxy;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -141,12 +141,12 @@ http {
         }
 
         location /mlops-segmentation {
-          auth_jwt_enabled on;
-          auth_jwt_redirect on;
-          auth_jwt_location HEADER=Authorization;
-          auth_jwt_algorithm RS512;
-          auth_jwt_use_keyfile on;
-          auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
+          # auth_jwt_enabled on;
+          # auth_jwt_redirect on;
+          # auth_jwt_location HEADER=Authorization;
+          # auth_jwt_algorithm RS512;
+          # auth_jwt_use_keyfile on;
+          # auth_jwt_keyfile_path "/etc/nginx/localhost+3-key.pub";
 
           proxy_pass http://mlops-segmentation;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
