--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -51,6 +51,7 @@ services:
       - 8600:8600
     environment:
       - DOCKER_HOST_IP=host.docker.internal
+    restart: unless-stopped
   next-nginx-jwt:
     container_name: next-nginx-jwt
     #    image: next-nginx-jwt:latest
@@ -63,7 +64,11 @@ services:
     #      - ./frontend/nginx/conf/nginx.conf:/etc/nginx/nginx.conf
     #      - ./frontend/nginx/localhost+3-key.pub:/etc/nginx/localhost+3-key.pub
     depends_on:
+      - cloudapp
       - petstore
+      - jiraproxy
+      - vehicles-api
+      - mlops-segmentation
     restart: unless-stopped
   next-cloudapp-shell:
     build:
@@ -77,6 +82,7 @@ services:
       - 5001:5001
     environment:
       - DOCKER_HOST_IP=host.docker.internal
+    restart: unless-stopped
   next-openmaps:
     build:
       context: ./
@@ -89,3 +95,56 @@ services:
       - 5002:5002
     environment:
       - DOCKER_HOST_IP=host.docker.internal
+    restart: unless-stopped
+  next-jira:
+    build:
+      context: ./
+      dockerfile: Dockerfile_FE
+      args:
+        SERVICE_PATH: frontend/remote/jira
+        SERVICE_PORT: 5003
+    container_name: next-jira
+    ports:
+      - 5003:5003
+    environment:
+      - DOCKER_HOST_IP=host.docker.internal
+    restart: unless-stopped
+  next-openai:
+    build:
+      context: ./
+      dockerfile: Dockerfile_FE
+      args:
+        SERVICE_PATH: frontend/remote/openai
+        SERVICE_PORT: 5004
+    container_name: next-openai
+    ports:
+      - 5004:5004
+    environment:
+      - DOCKER_HOST_IP=host.docker.internal
+    restart: unless-stopped
+  next-mlops:
+    build:
+      context: ./
+      dockerfile: Dockerfile_FE
+      args:
+        SERVICE_PATH: frontend/remote/mlops
+        SERVICE_PORT: 5005
+    container_name: next-mlops
+    ports:
+      - 5005:5005
+    environment:
+      - DOCKER_HOST_IP=host.docker.internal
+    restart: unless-stopped
+  next-petstore:
+    build:
+      context: ./
+      dockerfile: Dockerfile_FE
+      args:
+        SERVICE_PATH: frontend/remote/petstore
+        SERVICE_PORT: 5006
+    container_name: next-petstore
+    ports:
+      - 5006:5006
+    environment:
+      - DOCKER_HOST_IP=host.docker.internal
+    restart: unless-stopped
