- add README instructions for all implemented MFEs - control NEXT env variables from docker-compose-app.yml

--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -17,6 +17,16 @@ RUN \
 
 # Rebuild the source code only when needed
 FROM base AS builder
+
+ARG NEXT_PRIVATE_LOCAL_WEBPACK
+ENV NEXT_PRIVATE_LOCAL_WEBPACK $NEXT_PRIVATE_LOCAL_WEBPACK
+ARG NEXT_PUBLIC_JIRA_DOMAIN
+ENV NEXT_PUBLIC_JIRA_DOMAIN $NEXT_PUBLIC_JIRA_DOMAIN
+ARG NEXT_PUBLIC_JIRA_KEY
+ENV NEXT_PUBLIC_JIRA_KEY $NEXT_PUBLIC_JIRA_KEY
+ARG NEXT_PUBLIC_OPENAI_KEY
+ENV NEXT_PUBLIC_OPENAI_KEY $NEXT_PUBLIC_OPENAI_KEY
+
 ARG SERVICE_PATH
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
@@ -35,6 +45,14 @@ RUN \
 # Production image, copy all the files and run next
 FROM base AS runner
 ARG SERVICE_PORT
+ARG NEXT_PRIVATE_LOCAL_WEBPACK
+ENV NEXT_PRIVATE_LOCAL_WEBPACK $NEXT_PRIVATE_LOCAL_WEBPACK
+ARG NEXT_PUBLIC_JIRA_DOMAIN
+ENV NEXT_PUBLIC_JIRA_DOMAIN $NEXT_PUBLIC_JIRA_DOMAIN
+ARG NEXT_PUBLIC_JIRA_KEY
+ENV NEXT_PUBLIC_JIRA_KEY $NEXT_PUBLIC_JIRA_KEY
+ARG NEXT_PUBLIC_OPENAI_KEY
+ENV NEXT_PUBLIC_OPENAI_KEY $NEXT_PUBLIC_OPENAI_KEY
 
 WORKDIR /app
 
