--- a/frontend/remote/jira/.env.sample
+++ b/frontend/remote/jira/.env.sample
@@ -1,1 +1,3 @@
 NEXT_PRIVATE_LOCAL_WEBPACK=true
+NEXT_PUBLIC_JIRA_DOMAIN = 'https://xxxx.atlassian.net'
+NEXT_PUBLIC_JIRA_KEY = Y3NhYmFqYWthYmi01dUpTVGd1NDcxTGlSV0E1SDA9REUzRjY4N0M=
