- common Backend and Python Docker files

--- a/Dockerfile_BE
+++ b/Dockerfile_BE
@@ -1,7 +1,8 @@
 FROM docker.io/library/maven:3-eclipse-temurin-21 AS builder
+ARG SERVICE_PATH
 
-COPY src /home/root/src
-COPY pom.xml /home/root/pom.xml
+COPY ./$SERVICE_PATH/src /home/root/src
+COPY ./$SERVICE_PATH/pom.xml /home/root/pom.xml
 
 ARG DOCKER_HOST_IP
 ENV DOCKER_HOST_IP=host.docker.internal
@@ -10,10 +11,11 @@ WORKDIR /home/root
 RUN mvn package
 
 FROM eclipse-temurin:21-jdk-alpine AS run
+ARG SERVICE_PATH
 
 RUN mkdir -p /home/run
 WORKDIR /home/run
-COPY --from=builder /home/root/target/cloudapp-0.0.1-SNAPSHOT.jar /home/run/cloudapp-0.0.1-SNAPSHOT.jar
+COPY --from=builder /home/root/target/*-SNAPSHOT.jar /home/run/app.jar
 COPY localhost+3.pem /home/run/localhost+3.pem
 COPY localhost+3-key.pem /home/run/localhost+3-key.pem
 COPY localhost+3-key.pub /home/run/localhost+3-key.pub
@@ -21,4 +23,4 @@ COPY localhost+3-key.pub /home/run/localhost+3-key.pub
 ARG DOCKER_HOST_IP
 ENV DOCKER_HOST_IP=host.docker.internal
 
-ENTRYPOINT ["java", "-jar", "/home/run/cloudapp-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "/home/run/app.jar"]
