--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -73,6 +73,7 @@ RUN chown nextjs:nodejs .next
 # https://nextjs.org/docs/advanced-features/output-file-tracing
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY ./$SERVICE_PATH/*.* ./
 
 USER nextjs
 
