--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -9,10 +9,7 @@ WORKDIR /app
 
 # Install dependencies based on the preferred package manager
 COPY ./$SERVICE_PATH/package.json ./
-RUN \
-  if [ -f package.json ]; then npm install; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
+RUN npm install -f
 
 
 # Rebuild the source code only when needed
@@ -63,7 +60,7 @@ ENV NODE_ENV production
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-COPY --from=builder /app/public ./public
+COPY --from=builder /app/public* ./public
 
 # Set the correct permission for prerender cache
 RUN mkdir .next
