--- a/frontend/cloudapp-shell/package.json
+++ b/frontend/cloudapp-shell/package.json
@@ -37,11 +37,11 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10",
     "cypress": "^13.6.3",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "tailwindcss": "latest",
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.23",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.3.3"
   }
 }
