--- a/frontend/remote/petstore/package.json
+++ b/frontend/remote/petstore/package.json
@@ -26,10 +26,10 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
-    "autoprefixer": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "tailwindcss": "latest",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.23",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.3.3"
   }
 }
