--- a/frontend/remote/chatllm/package.json
+++ b/frontend/remote/chatllm/package.json
@@ -17,6 +17,7 @@
     "next": "^14.2.3",
     "ollama-ai-provider": "^0.10.0",
     "react": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "^5.89.0"
   },
