--- a/frontend/remote/petstore/package.json
+++ b/frontend/remote/petstore/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.18.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "^5.89.0"
