--- a/frontend/remote/mlops/package.json
+++ b/frontend/remote/mlops/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.6",
     "next": "^14.2.3",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "^5.89.0"
   },
