--- a/frontend/remote/moduletemplate/package.json
+++ b/frontend/remote/moduletemplate/package.json
@@ -15,6 +15,7 @@
     "@module-federation/runtime": "0.1.15",
     "next": "^14.2.3",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "^5.89.0"
   },
