--- a/frontend/remote/petstore/package.json
+++ b/frontend/remote/petstore/package.json
@@ -15,10 +15,12 @@
     "@module-federation/nextjs-mf": "^8.3.16",
     "@module-federation/enhanced": "^0.1.15",
     "@module-federation/runtime": "0.1.15",
+    "@mui/icons-material": "^5.11.16",
     "@mui/x-data-grid": "^6.18.7",
     "axios": "^1.2.6",
     "framer-motion": "^10.18.0",
     "next": "^14.2.3",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-datepicker": "^4.16.0",
