Jira updates: - Jira needs email + API token for password. - Make Jira project a variable so other people can use it with their own project.

--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -116,7 +116,9 @@ services:
         SERVICE_PORT: 5003
         NEXT_PRIVATE_LOCAL_WEBPACK: true
         #NEXT_PUBLIC_JIRA_DOMAIN: 'https://your-jira-instance.atlassian.net'
-        #NEXT_PUBLIC_JIRA_KEY: Y3NhYmFqYWthYm-------YOUR-API-KEY------SDA9REUzRjY4N0M=
+        #NEXT_PUBLIC_JIRA_API_TOKEN: Y3NhYmFqYWthYm-------YOUR-API-KEY------SDA9REUzRjY4N0M=
+        #NEXT_PUBLIC_JIRA_PROJECT_KEY: 'yourjiraprojectkey'
+        #NEXT_PUBLIC_JIRA_EMAIL: 'youremail'
     container_name: next-jira
     ports:
       - 5003:5003
