--- a/frontend/remote/jira/.env.sample
+++ b/frontend/remote/jira/.env.sample
@@ -1,3 +1,5 @@
 NEXT_PRIVATE_LOCAL_WEBPACK=true
-NEXT_PUBLIC_JIRA_DOMAIN_LOCAL = 'https://xxxx.atlassian.net'
-NEXT_PUBLIC_JIRA_KEY_LOCAL = Y3NhYmFqYWthYmi01dUpTVGd1NDcxTGlSV0E1SDA9REUzRjY4N0M=
+NEXT_PUBLIC_JIRA_DOMAIN = 'https://xxxx.atlassian.net'
+NEXT_PUBLIC_JIRA_PROJECT_KEY: 'YOURPROJECTKEY'
+NEXT_PUBLIC_JIRA_EMAIL: 'YOUREMAILATJIRA'
+NEXT_PUBLIC_JIRA_API_TOKEN = Y3NhYmFqYWthYmi01dUpTVGd1NDcxTGlSV0E1SDA9REUzRjY4N0M=
