--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -19,8 +19,12 @@ ARG NEXT_PRIVATE_LOCAL_WEBPACK
 ENV NEXT_PRIVATE_LOCAL_WEBPACK $NEXT_PRIVATE_LOCAL_WEBPACK
 ARG NEXT_PUBLIC_JIRA_DOMAIN
 ENV NEXT_PUBLIC_JIRA_DOMAIN $NEXT_PUBLIC_JIRA_DOMAIN
-ARG NEXT_PUBLIC_JIRA_KEY
-ENV NEXT_PUBLIC_JIRA_KEY $NEXT_PUBLIC_JIRA_KEY
+ARG NEXT_PUBLIC_JIRA_API_TOKEN
+ENV NEXT_PUBLIC_JIRA_API_TOKEN $NEXT_PUBLIC_JIRA_API_TOKEN
+ARG NEXT_PUBLIC_JIRA_PROJECT_KEY
+ENV NEXT_PUBLIC_JIRA_PROJECT_KEY $NEXT_PUBLIC_JIRA_PROJECT_KEY
+ARG NEXT_PUBLIC_JIRA_EMAIL
+ENV NEXT_PUBLIC_JIRA_EMAIL $NEXT_PUBLIC_JIRA_EMAIL
 
 ARG SERVICE_PATH
 WORKDIR /app
@@ -44,8 +48,8 @@ ARG NEXT_PRIVATE_LOCAL_WEBPACK
 ENV NEXT_PRIVATE_LOCAL_WEBPACK $NEXT_PRIVATE_LOCAL_WEBPACK
 ARG NEXT_PUBLIC_JIRA_DOMAIN
 ENV NEXT_PUBLIC_JIRA_DOMAIN $NEXT_PUBLIC_JIRA_DOMAIN
-ARG NEXT_PUBLIC_JIRA_KEY
-ENV NEXT_PUBLIC_JIRA_KEY $NEXT_PUBLIC_JIRA_KEY
+ARG NEXT_PUBLIC_JIRA_API_TOKEN
+ENV NEXT_PUBLIC_JIRA_API_TOKEN $NEXT_PUBLIC_JIRA_API_TOKEN
 
 WORKDIR /app
 
