--- a/frontend/remote/jira/package.json
+++ b/frontend/remote/jira/package.json
@@ -15,13 +15,16 @@
     "@module-federation/nextjs-mf": "^8.3.16",
     "@module-federation/enhanced": "^0.1.15",
     "@module-federation/runtime": "0.1.15",
-    "@mui/x-data-grid": "^6.18.7",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/x-tree-view": "^8.10.2",
+    "ai": "^4.1.28",
     "axios": "^1.2.6",
     "framer-motion": "^10.18.0",
     "html-to-json-parser": "^2.0.1",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "^5.89.0"
   },
