--- a/frontend/remote/jira/package.json
+++ b/frontend/remote/jira/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.18.0",
     "html-to-json-parser": "^2.0.1",
     "next": "^14.2.3",
+    "ollama-ai-provider": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.1",
