--- a/frontend/cloudapp-shell/package.json
+++ b/frontend/cloudapp-shell/package.json
@@ -13,36 +13,34 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@module-federation/nextjs-mf": "^8.3.16",
-    "@module-federation/enhanced": "^0.1.15",
-    "@module-federation/runtime": "0.1.15",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.15.5",
-    "@mui/x-data-grid": "^6.18.7",
-    "axios": "^1.2.6",
-    "d3": "^7.8.5",
-    "framer-motion": "^10.18.0",
-    "next": "^14.2.1-canary.3",
-    "next-auth": "^4.24.5",
+    "@module-federation/nextjs-mf": "^8.8.39",
+    "@module-federation/runtime": "^0.18.4",
+    "@module-federation/sdk": "^0.18.4",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "8.11.0",
+    "axios": "^1.11.0",
+    "d3": "^7.9.0",
+    "framer-motion": "^12.23.12",
+    "next": "15.5.2",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
-    "prettier": "^3.2.2",
-    "react": "^18",
-    "react-datepicker": "^4.16.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-loader-spinner": "^5.4.5",
-    "react-select": "5.8.0",
+    "prettier": "^3.6.2",
+    "react": "19.1.0",
+    "react-datepicker": "^8.7.0",
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "sockjs-client": "^1.6.1",
     "webstomp-client": "^1.2.6",
-    "webpack": "5.91.0"
+    "webpack": "^5.101.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.47",
-    "autoprefixer": "^10",
-    "cypress": "^13.6.3",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.23",
-    "tailwindcss": "3.4.17",
+    "@types/react": "^19",
+    "cypress": "14.5.4",
+    "eslint": "^9",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "typescript": "^5.3.3"
   }
 }
