uplift changes from https://github.com/cjakabos/jira-llm: - dependency updates - jira jql api updates

--- a/Dockerfile_OLLAMA
+++ b/Dockerfile_OLLAMA
@@ -1,9 +1,9 @@
 # Use the latest Ollama image as the base
 FROM ollama/ollama:latest
 
-# Start the Ollama server in the background and pull the model from docker-compose LLM_MODEL variable
-ARG LLM_MODEL
-RUN /bin/sh -c "ollama serve & sleep 2 && ollama pull $LLM_MODEL"
+# Start the Ollama server in the background and pull the model from docker-compose NEXT_PUBLIC_LLM_MODEL variable
+ARG NEXT_PUBLIC_LLM_MODEL
+RUN /bin/sh -c "ollama serve & sleep 2 && ollama pull $NEXT_PUBLIC_LLM_MODEL"
 
 # Set the entry point to start Ollama
 ENTRYPOINT ["/bin/ollama"]
