--- a/frontend/remote/jira/package.json
+++ b/frontend/remote/jira/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jira",
+  "name": "jira-llm",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,31 +10,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.39",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@module-federation/nextjs-mf": "^8.3.16",
-    "@module-federation/enhanced": "^0.1.15",
-    "@module-federation/runtime": "0.1.15",
+    "@module-federation/nextjs-mf": "8.8.42",
+    "@module-federation/runtime": "0.20.0",
+    "@module-federation/sdk": "0.20.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/x-tree-view": "^8.10.2",
-    "ai": "^4.1.28",
-    "axios": "^1.2.6",
-    "framer-motion": "^10.18.0",
+    "@mui/x-tree-view": "^8.11.0",
+    "ai": "^5.0.26",
+    "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "html-to-json-parser": "^2.0.1",
-    "next": "^14.2.3",
-    "ollama-ai-provider": "^1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "^9.0.1",
+    "next": "15.5.2",
+    "ollama-ai-provider-v2": "^1.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "webpack": "^5.89.0"
+    "webpack": "^5.89.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.47",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.23",
-    "tailwindcss": "3.4.17",
-    "typescript": "^5.3.3"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "15.5.2",
+    "@eslint/eslintrc": "^3"
   }
 }
