--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -162,6 +162,7 @@ services:
         SERVICE_PATH: frontend/remote/chatllm
         SERVICE_PORT: 5333
         NEXT_PRIVATE_LOCAL_WEBPACK: true
+        NEXT_PUBLIC_LLM_MODEL: 'deepseek-r1:1.5b'
     container_name: next-chatllm
     ports:
       - 5333:5333
