add spring-boot-starter-actuator for java backends to expose api health and info

--- a/backend/cloudapp/src/main/resources/application.properties
+++ b/backend/cloudapp/src/main/resources/application.properties
@@ -16,3 +16,5 @@ kafka.group.id=group-chat
 spring.kafka.producer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:${DOCKER_HOST_KAFKA_PORT:9093}
 spring.kafka.consumer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:${DOCKER_HOST_KAFKA_PORT:9093}
 spring.data.mongodb.uri=mongodb://websitemaster:local@${DOCKER_HOST_IP:localhost}:27018/cloudappdb?authSource=admin
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
