--- a/backend/petstore/src/main/resources/application.properties
+++ b/backend/petstore/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
