--- a/backend/vehicles-api/src/main/resources/application.properties
+++ b/backend/vehicles-api/src/main/resources/application.properties
@@ -3,3 +3,5 @@ maps.endpoint=http://localhost:9191
 spring.application.name=vehicles-api
 server.port=8880
 server.servlet.context-path=/vehicles
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
