--- a/backend/web-proxy/pom.xml
+++ b/backend/web-proxy/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>json</artifactId>
             <version>20230227</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
