--- a/backend/web-proxy/src/main/resources/application.properties
+++ b/backend/web-proxy/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8501
 server.servlet.context-path=/jiraproxy
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
