change to llama3.2:3b, as the repo will need tool use jira fixes due to jira project changes

--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -115,7 +115,7 @@ services:
         SERVICE_PATH: frontend/remote/jira
         SERVICE_PORT: 5003
         NEXT_PRIVATE_LOCAL_WEBPACK: true
-        NEXT_PUBLIC_LLM_MODEL: 'deepseek-r1:1.5b'
+        NEXT_PUBLIC_LLM_MODEL: 'llama3.2:3b'
         #NEXT_PUBLIC_JIRA_DOMAIN: 'https://your-jira-instance.atlassian.net'
         #NEXT_PUBLIC_JIRA_API_TOKEN: Y3NhYmFqYWthYm-------YOUR-API-KEY------SDA9REUzRjY4N0M=
         #NEXT_PUBLIC_JIRA_PROJECT_KEY: 'yourjiraprojectkey'
@@ -162,7 +162,7 @@ services:
         SERVICE_PATH: frontend/remote/chatllm
         SERVICE_PORT: 5333
         NEXT_PRIVATE_LOCAL_WEBPACK: true
-        NEXT_PUBLIC_LLM_MODEL: 'deepseek-r1:1.5b'
+        NEXT_PUBLIC_LLM_MODEL: 'llama3.2:3b'
     container_name: next-chatllm
     ports:
       - 5333:5333
