--- a/frontend/remote/jira/.env.sample
+++ b/frontend/remote/jira/.env.sample
@@ -3,4 +3,4 @@ NEXT_PUBLIC_JIRA_DOMAIN = 'https://xxxx.atlassian.net'
 NEXT_PUBLIC_JIRA_PROJECT_KEY: 'YOURPROJECTKEY'
 NEXT_PUBLIC_JIRA_EMAIL: 'YOUREMAILATJIRA'
 NEXT_PUBLIC_JIRA_API_TOKEN = Y3NhYmFqYWthYmi01dUpTVGd1NDcxTGlSV0E1SDA9REUzRjY4N0M=
-NEXT_PUBLIC_LLM_MODEL = 'deepseek-r1:1.5b'
+NEXT_PUBLIC_LLM_MODEL = 'llama3.2:3b'
