--- a/frontend/remote/mlops/package.json
+++ b/frontend/remote/mlops/package.json
@@ -15,8 +15,10 @@
     "@module-federation/nextjs-mf": "^8.3.16",
     "@module-federation/enhanced": "^0.1.15",
     "@module-federation/runtime": "0.1.15",
-    "@mui/x-data-grid": "^6.18.7",
+    "@mui/x-data-grid": "7.0.0",
     "axios": "^1.2.6",
+    "lucide-react": "^0.300.0",
+    "recharts": "^2.10.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
