- remove unneccessary cloudapp, petstore and vehicles passthrough from ai-orchestration - use quen3:4b for LLM, as llama does not have reasoning, only tool use - add ai-orchestration layer and monitor to nginx - update all routes to go through nginx - remove all CORS settings in all backend services and add it to nginx instead, the services will be in a private network - run ai-orchestration-monitor on 5010 internally also, as it should send request to directly to nginx

--- a/ai-orchestration/ai-orchestration-layer/Dockerfile
+++ b/ai-orchestration/ai-orchestration-layer/Dockerfile
@@ -75,7 +75,7 @@ ENV PYTHONPATH=/app/src \
     PORT=8700 \
     DEBUG=false \
     # LLM Configuration
-    LLM_MODEL=llama3.2:3b \
+    LLM_MODEL=qwen3:4b \
     OLLAMA_URL=http://ollama:11434 \
     LLM_TEMPERATURE=0.7 \
     LLM_MAX_TOKENS=2000 \
